fix image sizing on small screens

--- a/resources/style.css
+++ b/resources/style.css
@@ -168,6 +168,7 @@ body {
 
     .resume-card img {
         width: auto !important;
+        max-width: 60vw;
     }
 }
 
